# rmp2csv

./: .env.example  .gitignore  LICENSE  README.md  RMP_FORMAT.md  extract.py  pyproject.toml  rmp2csv.py  rmp2csv_gui.py
.github/workflows/: publish-pypi.yml
